--- a/src/app/customer-filter/components/custom-select/custom-select.scss
+++ b/src/app/customer-filter/components/custom-select/custom-select.scss
@@ -4,7 +4,7 @@
 
 .select {
   position: relative;
-  min-width: 200px;
+  min-width: 100px;
   padding: 10px 12px;
   border: 1px solid #e5e7eb;
   border-radius: 5px;
@@ -29,6 +29,7 @@
   overflow: auto;
   margin: 0;
   z-index: 1000;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
 
   ul {
     padding: 0;
