--- a/src/app/customer-filter/components/customer-filter/customer-filter.scss
+++ b/src/app/customer-filter/components/customer-filter/customer-filter.scss
@@ -13,3 +13,9 @@
 .filter-selectors {
   display: flex;
 }
+
+.filter-selectors-properties {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+}
